--- a/front-end/mobile-app/poollab-app/app.json
+++ b/front-end/mobile-app/poollab-app/app.json
@@ -4,7 +4,7 @@
     "slug": "poollab-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/poollab-icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
