--- a/front-end/mobile-app/poollab-mobile/package.json
+++ b/front-end/mobile-app/poollab-mobile/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "poollab",
+  "name": "poollab-mobile",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -16,12 +16,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-masked-view/masked-view": "0.3.1",
     "@react-navigation/native": "^6.0.2",
-    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
-    "expo-image": "~1.12.15",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
