--- a/front-end/mobile-app/poollab-mobile/tsconfig.json
+++ b/front-end/mobile-app/poollab-mobile/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "constants/theme.js", "assets/icons/Home.jsx", "assets/icons/HomeIcon.jsx", "app/(main)/qrScanner"  ]
+, "components/roundButton.jsx"  ]
 }
