--- a/front-end/mobile-app/poollab-mobile/app.json
+++ b/front-end/mobile-app/poollab-mobile/app.json
@@ -4,11 +4,11 @@
     "slug": "poollab-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/logo_icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/images/logo_long.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
