--- a/front-end/mobile-app/poollab-mobile/package.json
+++ b/front-end/mobile-app/poollab-mobile/package.json
@@ -43,6 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-calendars": "^1.1286.0",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-image-picker": "^7.1.2",
     "react-native-reanimated": "~3.10.1",
