--- a/front-end/mobile-app/poollab-mobile/package.json
+++ b/front-end/mobile-app/poollab-mobile/package.json
@@ -28,6 +28,7 @@
     "expo-camera": "~15.0.16",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.29",
     "expo-font": "~12.0.10",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
@@ -53,19 +54,19 @@
     "react-native-svg": "^15.8.0",
     "react-native-vnpay-merchant": "file:react-native-vnpay-merchant",
     "react-native-web": "~0.19.13",
-    "vnpay": "^1.6.0",
+    "react-native-webview": "^13.12.5",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.8",
+    "@types/bun": "latest",
     "@types/jest": "^29.5.13",
     "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.4",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3",
-    "@types/bun": "latest"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
