--- a/front-end/mobile-app/poollab-mobile/package.json
+++ b/front-end/mobile-app/poollab-mobile/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@emailjs/react-native": "^4.2.2",
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.4.1",
