--- a/front-end/web-app/poollab-web/.env
+++ b/front-end/web-app/poollab-web/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_LOCAL_URL=https://poollabwebapi20241008201316.azurewebsites.net/api
-NEXT_PUBLIC_API_URL=http://localhost:5002/api
+NEXT_PUBLIC_LOCAL_URL1=http://localhost:5002/api 
+NEXT_PUBLIC_LOCAL_SIGNAL_URL2=http://localhost:5002
+NEXT_PUBLIC_LOCAL_SIGNAL_URL=https://poollabwebapi20241008201316.azurewebsites.net
